structure/style.css
:root {
    --bgColorDarkn: #1c153c;
    --iconsnFontLightM: #1c153c;
    --sectionFillDark: #2d264c;
    --whiteTextnIcons: #ffffff;
    --bgColorLight: #fbfaff;
    --buttonBlue: #ccd6ff;
    --green: #42d98a;
    --red: #ff6474;
    --orange: #fda759;
    --violet: #8198F6;
}
body {
    font-family: 'Quicksand';
    height: 100%;
    width: 100%;
}
.pattern {
    width: 100%;
    height: 100%;
    background-image: url(img/Pattern.svg);
    background-color: var(--bgColorDarkn);
    background-repeat: repeat-x;
    position: absolute;
}

.layer {
    background-color: var(--bgColorDarkn);
    top: 12%;
    left: 0;
    width: 100%;
    z-index: 99;
    box-shadow: 0px -6px 5px rgba(0, 0, 0, 0.70);
    border-radius: 150px 150px 0px 0px;
    position: absolute;
}

.login-logo {
    width: 55%;
    height: auto;
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-top: 40%;
    background-image: unset;
}
.signout-logo{
    position: absolute;
    right: 2vh;
}

.login-p {
    color: var(--whiteTextnIcons);
    font-family: 'Quicksand';
    font-size: 45px;
    background-image: unset;
    display: block;
    margin-left: auto;
    margin-right: auto;
    padding: 0 6%;
}

.login-form input {
    background-image: unset;
}

.login-form button {
    background-image: unset;
    height: auto;
    width: auto;
    padding: 30px 110px 30px 110px;
    font-family: 'Quicksand';
    font-size: 55px;
    color: var(--whiteTextnIcons);
    background-color: var(--violet);
    border-radius: 30px;
    font-weight: 600;
    margin-top: 12%;
    display: block;
    margin-left: auto;
    margin-right: auto;
    box-shadow: 0 3px 10px rgb(0 0 0 / 0.4);
}

.login-form {
    background-image: unset;
    position: relative;
}

.login-content {
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 70%;
    margin-top: 15%;
    background-image: unset;
    position: relative;
}

.login-username {
    background-color: var(--sectionFillDark);
    border-radius: 30px;
    height: 120px;
    width: 550px;
    border: none;
    box-shadow: 0 3px 10px rgb(0 0 0 / 0.4);
    display: block;
    margin-left: auto;
    margin-right: auto;
    padding: 1% 5%;
    border-left: 10px solid #fda759;
}

.login-password {
    background-color: var(--sectionFillDark);
    border-radius: 30px;
    height: 120px;
    width: 550px;
    margin-top: 8%;
    border: none;
    box-shadow: 0 3px 10px rgb(0 0 0 / 0.4);
    display: block;
    margin-left: auto;
    margin-right: auto;
    padding: 1% 5%;
    border-left: 10px solid #fda759;
}

input {
    color: var(--whiteTextnIcons);
    font-size: 45px;
}

::placeholder {
    color: var(--whiteTextnIcons);
    font-family: 'Quicksand';
    font-size: 45px;
}

.patterLogin {
    position: absolute;
    top: -10%;
    width: 100%;
    height: 30vh;
}

.buttom-box {
    display: flex;
    justify-content: center;
    position: fixed;
    bottom: 0;
    width: 100vw;
}

.bird {
    height: auto;
    width: 10%;
    position: absolute;
    bottom: 2vh;
    margin-bottom: 10%;
}

.buttom-box p {
    bottom: 0;
    color: var(--whiteTextnIcons);
    font-family: 'Quicksand';
    font-size: 35px;
    font-weight: 100;
}

.screenError {
    width: 700px;
    margin-right: 20%;
    margin-left: 30%;
    margin-top: 15%;
    margin-bottom: 10%;
    z-index: 100;
}
/*STARt of other pages*/
.patternShort{
    left: 0px;
    top: -50px;
    width: 100%;
    height: 40%;
    background-image: url(img/Pattern.svg);
    background-color: var(--bgColorDarkn);
    background-repeat: repeat-x;
    position: absolute;
}
.layerLonger{
    background-color: var(--bgColorDarkn);
    top: 8%;
    left: 0;
    width: 100%;
    z-index: 99;
    box-shadow: 0px -6px 5px rgba(0, 0, 0, 0.70);
    border-radius: 60px 60px 0px 0px;
    position: absolute;
    height: 90%;
}
h1{
    font-weight: 600;
    font-size: 35px;
    line-height: 44px;
    color: var(--whiteTextnIcons);
    padding: 2%;
    margin: 10px;
}
h2{
    font-style: normal;
    font-weight: 500;
    font-size: 25px;
    line-height: 31px;
    padding-left: 10%;
    padding-right: 10%;
    color: var(--bgColorLight);


}
.icon{
width: 30px;
height: 32px;
}
.iconLeft{
    width: 30px;
height: 32px;
position: absolute;
left:7%;
top: 24px;
}
.arrowWhite{
  width: 21px;
}


.header{
    text-align: center;
}

.monthContainer{
    margin-left: auto;
    margin-right: auto;
    width: 50%;
    background-color:var(--buttonBlue);
 background: rgba(204, 214, 255, 0.15);
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 border-radius: 15px;
 max-width: 330px;
 min-width: 250px;
 }
 
 .month-slide{
     display: none;
     height: 60px;
     display: flex;
     align-items: center;
     justify-content: center;
     padding: 10px;
 }
 
 .prev, .next {
     cursor: pointer;
     position: absolute;
     top: 9.3%;
     width: auto;
     padding: 0;
     color: white;
     font-weight: bold;
     font-size: 35px;
     transition: 0.6s ease;
     user-select: none;
 }
 
 .next {
     right: 25%;
   }
 
 .prev {
     left: 25%;
   }
 
 .name-of-month{
     color: var(--whiteTextnIcons);
     font-size: 25px;
     text-align: center;
 
 }
 
 .fade {
     animation-name: swipe;
     animation-duration: .8s;
   }
 
   @keyframes swipe {
     0% { margin-left: -50px; opacity: 0;}
     20% { margin-left: -50px; opacity: 0%; }
     35% { margin-left:0px; opacity: 30%;}
     100% { margin-left:0px; opacity: 100%;}
   }

.carousel > ul {
    padding: 0;
    margin: 0;
    list-style-type: none;
}
.carousel{
    position: relative;
    width: 100vw;
height: 14vh;
}

.slide{
position: absolute;
inset: 0;
opacity: 0;
right: 3rem;
}

.slide[data-active] {
    opacity: 1;
}

.carosuelbtn{
    z-index: 99;
    position: absolute;
    border: none;
    font-size: 4rem;
    color: var(--whiteTextnIcons);
    background: none;
}

.carosuelbtn.prev{
left: 1rem;
}

.carosuelbtn.next{
    right: 1rem;
    }
/* ... */

